--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,5 +1,12 @@
 .container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.fluid {
+  overflow: hidden;
+  max-width: 100%;
+  margin: 0;
 }
