--- a/styles/base.css
+++ b/styles/base.css
@@ -8,6 +8,7 @@
   --textColor: #444444;
   --cta: #3fa2b8;
   --footerBg: #e6f6f9;
+  --borderColor: #99b7bd4f;
   font-family: Arial, sans-serif;
 }
 
