--- a/components/SearchBar/SearchBar.module.css
+++ b/components/SearchBar/SearchBar.module.css
@@ -1,7 +1,10 @@
-.form {
-  position: relative;
+.container {
   width: calc(100% - 1em);
   max-width: 255px;
+}
+
+.form {
+  position: relative;
 }
 
 .input {
@@ -11,21 +14,7 @@
   height: 2.8em;
   border-radius: 2em;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
-  border: 1px solid var(--borderColor);
-}
-
-.input::placeholder {
-  /* Chrome, FF, Opera, Safari 10.1+ */
-  color: var(--placeholder-grey-color, lightgrey);
-  opacity: 1; /* FF */
-}
-.input:-ms-input-placeholder {
-  /* IE 10-11 */
-  color: var(--placeholder-grey-color, lightgrey);
-}
-.input::-ms-input-placeholder {
-  /* Edge */
-  color: var(--placeholder-grey-color, lightgrey);
+  border: 1px solid var(--lightGrey);
 }
 
 .button {
@@ -39,12 +28,31 @@
   padding: 0;
 }
 
-.icon {
-  width: 14px;
-  height: 14px;
-  font-size: 0.8em;
+.autosuggestResults {
+  z-index: 2;
+  margin-top: 0;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  list-style-type: none;
+  background-color: #fff;
+  border-left: 1px solid var(--lightGrey);
+  border-right: 1px solid var(--lightGrey);
+  border-bottom: 1px solid var(--lightGrey);
+  border-radius: 0 0 24px 24px;
+  width: calc(100% - 50px);
 }
 
-.icon svg {
-  color: var(--placeholder-grey-color, lightgrey);
+.autosuggestWord {
+  padding: 7px 15px;
+  color: var(--textColor);
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.autosuggestWord:hover {
+  background: var(--lightGrey);
+}
+
+.highlight {
+  background: var(--lightGrey);
 }
