* hide/show mobile header, fix header style
* mobile header, fix footer desktop

* fix pre-commit

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -117,4 +117,14 @@
     grid-gap: 10px;
     margin-top: 0;
   }
+
+  .newsletterForm {
+    justify-content: flex-end;
+  }
+
+  .separationLine {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px solid;
+  }
 }
