--- a/styles/base.css
+++ b/styles/base.css
@@ -18,11 +18,17 @@
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background: white;
   color: var(--textColor);
   font-family: var(--bodyFont);
   font-weight: 400;
+  min-height: 100%;
 }
 
 h1,
