--- a/styles/base.css
+++ b/styles/base.css
@@ -2,14 +2,15 @@
   --elliotPrimary: #4aacc2;
   --elliotHover: #9cd5db;
   --elliotVisited: #63bfce;
-  --dimGrey: #999999;
+  --dimGrey: #999;
   --lightGrey: #f0f0f0;
-  --placeholder: #cccccc;
-  --textColor: #444444;
+  --placeholder: #ccc;
+  --textColor: #444;
   --cta: #3fa2b8;
   --footerBg: #e6f6f9;
   --borderColor: #99b7bd4f;
   --lightGrey: #e8e8e8;
+
   font-family: Arial, sans-serif;
 }
 
@@ -53,12 +54,14 @@ label {
   color: var(--placeholder);
   opacity: 1; /* FF */
 }
-.input:-ms-input-placeholder {
-  /* IE 10-11 */
-  color: var(--placeholder);
-}
+
 .input::-ms-input-placeholder {
   /* Edge */
+  color: var(--placeholder);
+}
+
+.input:-ms-input-placeholder {
+  /* IE 10-11 */
   color: var(--placeholder);
 }
 
