--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,6 +1,10 @@
 .header {
+  background-color: white;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: var(--zindex300);
 }
 
 .wrapperDesktop {
@@ -13,6 +17,7 @@
   width: 100%;
   justify-content: space-around;
   margin: 15px;
+  margin-bottom: 0;
 }
 
 .logoRow {
