--- a/pages/whywater.module.css
+++ b/pages/whywater.module.css
@@ -7,7 +7,7 @@
   min-height: calc(100vh - 165px);
   height: 100%;
   position: relative;
-  top: -3px;
+  top: -1px;
 }
 
 .layer2 {
@@ -47,22 +47,27 @@
 
 .bg2 {
   width: 700px;
-  right: -140px;
+  right: -150px;
 }
 
-.bg3 {
+.bg3,
+.bg4,
+.bg5 {
   right: auto;
+  left: -50px;
 }
 
-.bg4 {
-  left: -140px;
-  right: auto;
+.wellTop {
+  position: absolute;
+  right: -103px;
+  bottom: 0;
+  width: 240px;
 }
 
 .wellMiddle {
   position: absolute;
-  top: 0;
-  background-image: url('/images/why-water-page/wellBit.png');
+  top: -1px;
+  background-image: url('/images/why-water-page/wellMiddle.png');
   background-repeat: repeat round;
   background-size: 100%;
   height: 100%;
@@ -72,6 +77,13 @@
 
 .wellLastBit {
   height: 65%;
+}
+
+.wellBottom {
+  position: absolute;
+  right: 10px;
+  width: 36px;
+  bottom: 12%;
 }
 
 .headline {
@@ -197,6 +209,10 @@
     right: auto;
   }
 
+  .bg3 {
+    left: -20px;
+  }
+
   .bg4 {
     width: 150%;
     right: auto;
@@ -208,10 +224,19 @@
     right: auto;
   }
 
+  .wellTop {
+    right: -83px;
+    width: 200px;
+  }
+
   .wellMiddle {
-    width: 8%;
-    right: 2.4%;
+    width: 32px;
+    right: 10px;
     top: -3px;
+  }
+
+  .wellBottom {
+    width: 32px;
   }
 
   .description {
@@ -269,6 +294,10 @@
   .subtitle {
     margin-bottom: 23px;
   }
+
+  .wellBottom {
+    bottom: 15%;
+  }
 }
 
 @media (min-width: 768px) {
@@ -281,10 +310,6 @@
     min-height: calc(100vh - 108px);
   }
 
-  .bg4 {
-    left: auto;
-  }
-
   .bg1,
   .bg2,
   .bg3,
@@ -293,9 +318,21 @@
     width: 100%;
   }
 
-  .wellMiddle {
-    width: 6.1%;
-    right: 25%;
+  .bg3,
+  .bg4,
+  .bg5 {
+    left: auto;
+  }
+
+  .wellTop {
+    right: 40px;
+    width: 300px;
+  }
+
+  .wellMiddle,
+  .wellBottom {
+    width: 47px;
+    right: 180px;
   }
 
   .headline3 {
@@ -327,6 +364,21 @@
   .headline3 {
     right: -24%;
     padding-top: 20px;
+  }
+
+  .wellTop {
+    right: 100px;
+    width: 350px;
+  }
+
+  .wellMiddle,
+  .wellBottom {
+    width: 54px;
+    right: 264px;
+  }
+
+  .wellBottom {
+    bottom: 20%;
   }
 
   .bg1Hover {
@@ -383,7 +435,6 @@
   }
 }
 
-/* MEDIA HEIGHT */
 @media (min-height: 700px) {
   .layer6 {
     padding-top: 0;
@@ -403,5 +454,28 @@
 @media (min-height: 1080px) {
   .wellLastBit {
     height: 85%;
+  }
+}
+
+@media (min-width: 1240px) {
+  .wellTop {
+    right: 200px;
+  }
+
+  .wellMiddle,
+  .wellBottom {
+    right: 364px;
+  }
+
+  .wellBottom {
+    bottom: 25%;
+  }
+
+  .layer6 {
+    padding-top: 10%;
+  }
+
+  .headline6 {
+    margin-top: -15%;
   }
 }
