--- a/components/Buttons/ButtonOutline.module.css
+++ b/components/Buttons/ButtonOutline.module.css
@@ -4,7 +4,7 @@
   padding: 5px;
   border-radius: 3px;
   cursor: pointer;
-  font-family: var(--headerFont);
+  font-family: var(--fontCommon);
   color: black;
   text-align: center;
 }
