--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0px;
+  margin: 20px 0;
 }
 
 .logo {
@@ -33,17 +33,17 @@
 }
 
 .dropletContainer {
-  height: 1.6em;
-  display: flex;
+  display: inline-flex;
 }
 
 .dropletImg {
-  min-width: 1em;
-  margin-right: 5px;
+  margin-right: 3px;
+  width: 20px;
+  height: 26px;
 }
 
 .dropletCount {
-  margin-top: 6px;
+  margin-top: 2px;
 }
 
 .searchWrap {
