--- a/styles/base.css
+++ b/styles/base.css
@@ -71,6 +71,10 @@ a {
   color: var(--placeholder);
 }
 
+p {
+  margin: 0;
+}
+
 /* COMMON STYLE */
 .main {
   max-width: 1200px;
@@ -121,4 +125,132 @@ a {
 
 .card__img {
   width: 25em;
+}
+
+.old_container {
+  background: #f7f7f7;
+  margin-top: 1px;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.old_container__fluid {
+  background: #f7f7f7;
+  margin-top: 1px;
+  margin-right: 0;
+  margin-left: 0;
+  width: 100%;
+}
+
+/* ==================================================
+   Show More
+================================================== */
+.show-more {
+  text-align: center;
+}
+
+.show-more__title {
+  margin-bottom: 0;
+  font-size: 9px;
+}
+
+.chevron {
+  position: relative;
+  display: block;
+  height: 20px;
+  right: 10px;
+  top: -2em;
+}
+
+.show-more__link {
+  display: inline-block;
+}
+
+.show-more__link:hover {
+  text-decoration: none;
+}
+
+.chevron::before,
+.chevron::after {
+  position: absolute;
+  display: block;
+  content: "";
+  border: 10px solid transparent;
+}
+
+.chevron::before {
+  top: 0;
+  border-top-color: var(--black, black);
+}
+
+.chevron::after {
+  top: -2px;
+  border-top-color: #fff;
+}
+
+/* ==================================================
+   Form styles
+================================================== */
+.form-control {
+  border-radius: 30px;
+  border-style: hidden;
+  background-color: #fff;
+  box-shadow: -1px 1px 5px -1px rgba(1, 1, 1, 0.2);
+  padding-left: 1.5em;
+  font-style: italic;
+}
+
+.form-control--multiline {
+  padding-top: 1.2em;
+}
+
+.form-control::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--placeholder-grey-color, lightgrey);
+  opacity: 1; /* Firefox */
+}
+
+.form-control::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: var(--placeholder-grey-color, lightgrey);
+}
+
+.form-control:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: var(--placeholder-grey-color, lightgrey);
+}
+
+.control-group {
+  margin-top: 2em;
+}
+
+/* about page */
+.facts__text {
+  font-size: 1.5vw;
+  letter-spacing: 1px;
+  line-height: 1.25em;
+}
+
+.facts__text a {
+  color: var(--elliotPrimary);
+}
+
+@media (min-width: 768px) {
+  .old_container {
+    background: white;
+    margin-top: 0;
+    margin-left: 130px;
+  }
+
+  .old_container__fluid {
+    background: white;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .old_container {
+    max-width: 1100px;
+  }
 }
