--- a/components/TabsMenu/TabsMenu.module.css
+++ b/components/TabsMenu/TabsMenu.module.css
@@ -1,7 +1,7 @@
 .tabs {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--lightGrey);
+  border-bottom: 1px solid var(--lighterGrey);
 }
 
 .content {
