--- a/components/NewsView/NewsView.module.css
+++ b/components/NewsView/NewsView.module.css
@@ -32,8 +32,7 @@
 }
 
 .placeholder {
-  background: var(--lightGrey);
-  display: block;
+  display: none;
 }
 
 .title {
@@ -74,5 +73,11 @@
 
   .wrap {
     flex-direction: row;
+  }
+
+  .placeholder {
+    background: var(--lightGrey);
+    display: block;
+    padding: 0;
   }
 }
