Load more component
* try to make a test for the component

* clean up

* test for button

* add button and page param

* load more images, video, news

* load more web view

* don't show load button

* merge conflict, fix build

* fix all tests

* defensive code, isLoading state

--- a/components/AllResultsView/AllResultsView.module.css
+++ b/components/AllResultsView/AllResultsView.module.css
@@ -1,3 +1,10 @@
+.titleNoResults {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+}
+
 .gridContainer {
   display: grid;
   padding: 15px;
