--- a/components/ImagesView/ImagesView.module.css
+++ b/components/ImagesView/ImagesView.module.css
@@ -1,3 +1,10 @@
+.titleNoResults {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
