--- a/components/NewsView/NewsView.module.css
+++ b/components/NewsView/NewsView.module.css
@@ -1,3 +1,10 @@
+.titleNoResults {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+}
+
 .articles {
   padding: 8px 15px;
 }
