--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .wrapper {
-  height: 100%;
+  min-height: 100%;
   display: grid;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto 1fr auto;
 }
 
 .container {
@@ -15,4 +15,8 @@
 .fluid {
   overflow: hidden;
   max-width: 100%;
+}
+
+.main {
+  min-height: 100%;
 }
