fix layout homepage

--- a/components/HeaderHome/HeaderHome.module.css
+++ b/components/HeaderHome/HeaderHome.module.css
@@ -2,9 +2,9 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
-  position: sticky;
-  top: 0;
   z-index: var(--zindex300);
+  padding: 30px;
+  margin-bottom: 100px;
 }
 
 .headerRight {
