--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -1,3 +1,30 @@
+.button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  border-radius: 6px;
+  padding: 20px;
+}
+
+.modalBackground {
+  position: absolute;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(10, 10, 10, 0.86);
+}
+
+.modalCard {
+  margin: 0 auto;
+  display: block;
+  margin-top: 250px;
+  width: 300px;
+  height: 300px;
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
 .nav {
   position: relative;
 }
