--- a/components/Buttons/Button.module.css
+++ b/components/Buttons/Button.module.css
@@ -31,12 +31,18 @@ PRIMARY BUTTON
 */
 .primary {
   background-size: 200% auto;
-  background-image: linear-gradient(to right, var(--elliotSecondary) 0%, var(--elliotPrimary) 51%, var(--elliotSecondary) 100%);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
+  background-image: linear-gradient(
+    to right,
+    var(--elliotSecondary) 0%,
+    var(--elliotPrimary) 51%,
+    var(--elliotSecondary) 100%
+  );
+  box-shadow: 1px 1px 12px rgba(225, 215, 215, 0.24);
   color: white;
-  border-radius: 30px;
+  border-radius: 15px;
   padding: 8px 24px;
   transition: 0.5s;
+  font-weight: bold;
 }
 
 .primary:hover {
@@ -90,7 +96,12 @@ OUTLINE BUTTON
 
 .outline:hover {
   color: white;
-  background-image: linear-gradient(to right, var(--elliotSecondary) 0%, var(--elliotPrimary) 51%, var(--elliotSecondary) 100%);
+  background-image: linear-gradient(
+    to right,
+    var(--elliotSecondary) 0%,
+    var(--elliotPrimary) 51%,
+    var(--elliotSecondary) 100%
+  );
   border: 2px solid transparent;
 }
 
