--- a/components/Forms/Inputs/Inputs.module.css
+++ b/components/Forms/Inputs/Inputs.module.css
@@ -31,6 +31,26 @@ INPUT
   opacity: 0.4;
 }
 
+.input:focus {
+  outline: 1px dotted var(--placeholder);
+}
+
+.input::placeholder {
+  /* Chrome, FF, Opera, Safari 10.1+ */
+  color: var(--placeholder);
+  opacity: 1; /* FF */
+}
+
+.input::-ms-input-placeholder {
+  /* Edge */
+  color: var(--placeholder);
+}
+
+.input:-ms-input-placeholder {
+  /* IE 10-11 */
+  color: var(--placeholder);
+}
+
 /* 
 LABEL
 ==============
@@ -45,64 +65,6 @@ LABEL
   font-size: 14px;
   font-weight: 200;
 }
-
-/* 
-BUTTON SUBMIT 
-===================
-*/
-
-/* .button[type='submit'] {
-  background: #ec5990;
-  color: white;
-  text-transform: uppercase;
-  border: none;
-  margin-top: 40px;
-  padding: 20px;
-  font-size: 16px;
-  font-weight: 100;
-  letter-spacing: 10px;
-}
-
-.button[type='submit']:hover {
-  background: #bf1650;
-}
-
-.button[type='submit']:active {
-  transition: 0.3s all;
-  transform: translateY(3px);
-  border: 1px solid transparent;
-  opacity: 0.8;
-}
-
-.button[type='submit'] {
-  -webkit-appearance: none;
-}
-
-.button[type='button'] {
-  display: block;
-  appearance: none;
-  background: #333;
-  color: white;
-  border: none;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  border-radius: 4px;
-}
-
-.button {
-  display: block;
-  appearance: none;
-  margin-top: 40px;
-  border: 1px solid #333;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  border-radius: 4px;
-}
-
-.button:hover {
-  background: #222;
-} */
 
 /* 
 SELECT
@@ -120,6 +82,16 @@ SELECT
   height: 34px;
   padding: 6px 12px;
   padding-left: 1.5em;
+}
+
+/* 
+TEXTAREA
+===================
+*/
+.textarea {
+  @extend .input;
+
+  min-height: 180px;
 }
 
 /* 
