--- a/styles/base.css
+++ b/styles/base.css
@@ -54,12 +54,22 @@ h3,
 h4 {
   font-family: var(--fontCommon);
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 1.3;
+}
+
+h2 {
+  font-size: 26px;
+  font-size: 1.8em;
 }
 
 a {
   text-decoration: none;
   color: var(--BSlink);
+}
+
+/* To remove once all form are react-form-hooks */
+.input:focus-visible {
+  outline: 1px solid black;
 }
 
 .input::placeholder {
@@ -211,17 +221,6 @@ ul {
   display: inline-block;
   margin-bottom: 5px;
   font-weight: bold;
-}
-
-/* about page */
-.facts__text {
-  font-size: 1.5vw;
-  letter-spacing: 1px;
-  line-height: 1.25em;
-}
-
-.facts__text a {
-  color: var(--elliotPrimary);
 }
 
 @media (min-width: 768px) {
