--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -21,8 +21,19 @@
 }
 
 .centeredDiv {
-  padding: 20px;
+  max-width: 700px;
+  width: 80%;
   text-align: center;
   color: white;
   z-index: 1;
+}
+
+.button {
+  padding-top: 20px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    margin-top: 20px;
+  }
 }
