--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -21,7 +21,7 @@
 }
 
 .centeredDiv {
-  max-width: 700px;
+  max-width: 800px;
   width: 80%;
   text-align: center;
   color: white;
@@ -30,6 +30,7 @@
 
 .button {
   padding-top: 20px;
+  display: inline-block;
 }
 
 @media (min-width: 768px) {
