--- a/components/Person/Person.module.css
+++ b/components/Person/Person.module.css
@@ -11,7 +11,7 @@
 
 .small {
   max-width: 80px;
-  margin: 0 20px;
+  margin: 0 10px;
   font-size: 15px;
   line-height: 1.2;
   display: flex;
@@ -29,11 +29,23 @@
   border-radius: 50%;
   max-width: 150px;
   width: 100%;
+  max-height: 150px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .big .pic {
   max-width: 300px;
   margin-bottom: 30px;
+  width: 100%;
+  height: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
+
+.small .pic {
+  max-width: 80px;
+  max-height: 80px;
 }
 
 .name {
@@ -46,10 +58,21 @@
 }
 
 .socialIcons {
-  padding-top: 10px;
   font-size: 1.2em;
   display: inline-block;
   margin-top: auto;
+  padding: 10px 6px 0 6px;
+  opacity: 0.7;
+}
+
+.socialIcons:hover {
+  opacity: 1;
+}
+
+@media (min-width: 600px) {
+  .small {
+    margin: 0 20px;
+  }
 }
 
 @media (min-width: 1100px) {
